--- a/README.org
+++ b/README.org
@@ -1,9 +1,9 @@
 * Simple Handlebars CLI (in Rust)
 
-Simple CLI for generating text from handlebars (or Mustache) templates,
-by feeding them with data from file (YAML parser used is for it, so JSON
-also supported), writen in Rust programming language (with usage serde_yaml
-and handlebars crates).
+Simple CLI for generating text from handlebars templates, by feeding them
+with data from file (YAML parser used is for it, so JSON is also supported),
+writen in Rust programming language (with usage serde_yaml and handlebars
+crates).
 
 ** Usage
 
@@ -12,9 +12,8 @@ hbs-cli <properties file> <template file> > <output file>
 #+end_src
 
 Where ~<properties file>~ can be ether YAML or JSON (as YAML parser
-is a JSON parser too) and ~<template file>~ is handlebars template
-(so Mustache templates should work also). Template is generated on
-standard output.
+is a JSON parser too) and ~<template file>~ is handlebars template.
+Template is generated on standard output.
 
 ** Building
 
